# rust-nix-monorepo

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: nix-build.yml
services/api-service/: Cargo.toml
services/api-service/src/: main.rs
services/cli-tool/: Cargo.toml
services/cli-tool/src/: main.rs
services/web-service/: Cargo.toml  main.rs
services/web-service/src/: main.rs
services/web-service/static/: index.html  style.css
shared/common/: Cargo.toml
shared/common/src/: lib.rs
