[package]
name = "web-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../shared/common" }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }